manifests/seiscomp/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seiscomp-fdsnws-deployment
  labels:
    app: seiscomp
spec:
  template:
    spec:
      containers:
        - name: seiscomp-fdsnws
          image: ghcr.io/ingv-oe-dev/docker-seiscomp/seiscomp:5.3.0
          resources:
            requests:
                memory: "2Gi"
                cpu: "500m"
            limits:
                memory: "4Gi"
                cpu: "1000m"
      volumes:
        - name: config
          configMap:
            name: seiscomp-config
        - name: nfs-vol
          nfs:
            server: hpcfdsn1.ct.int.ingv.it
            path: /home/fdsnmanager/hpcfdsn1SDS
            readOnly: true
